there is no JavaScript, so there is no reason to behave like it
"You do not have JS, and that is why you do not need Js.java." The emulation
existed to match an n8n implementation that is DELETED, and four catalogues froze
that matching, which is what made every previous pass call it untouchable. The
port is finished and was validated end to end. The catalogues were proving a
migration that is over.

AND THE EMULATION WAS NOT NEUTRAL. It froze JavaScript's worst behaviours into a
Java system, and this is what a model was actually being sent:

    Repository: o/r   (branch main, module '')
  - Source file: undefined
  + Source file:
    SVACE MARKER  [Major]  HANDLE_LEAK
  - Location as reported: undefined:5
  + Location as reported: :5

The pipeline was telling the model the file was named "undefined". A prompt field
that nobody set now says so — "(repository not recorded)" — and that spelling was
chosen by READING the templates: empty turns "contributions to %s." into
"contributions to .", a broken sentence a model fills in for itself. Separately,
`x || ''` was swallowing a legitimate 0 and false.

DELETED: Js.java, JsValue.java and their tests. JsText survives as SourceText,
re-justified on Unicode rather than "because JavaScript" — String.isBlank excludes
U+FEFF, and a BOM-only file must count as empty or a marker is adjudicated against
a file with no code in it. Two other things were kept on Java grounds: a lenient
leading-integer parse, because the Svace CSV Line column really contains
"7 (col 3)" and Integer.parseInt would drop the row; and a tolerant base64 decoder,
kept only after the JDK's was tried and caught failing.

THE ONE OBLIGATION THAT SURVIVES THE ARGUMENT ENTIRELY. Js.numberToString fed
dedup_key — the marker IDENTITY that 282 live rows and every human comment join
on. Java's Double.toString writes 44.0 where the wire has always carried 44, so a
careless removal re-keys the whole backlog: every marker re-ingests as new,
re-proves from scratch, and